spring-boot/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-boot
  name: spring-boot
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: spring-boot
    weight: 100
